#71 fix : fix text align

--- a/Frontend/input.css
+++ b/Frontend/input.css
@@ -30,29 +30,32 @@ section {
 }
 
 fieldset {
-  margin: 20px;
-  border: 0 solid black;
- }
- 
+margin: 20px;
+border: 0 solid black;
+line-height: 2rem;
+padding: 0.2em 0.4em;
+vertical-align: middle;
+}
+
 #young {
-  margin-top: 20px;
-  margin-left: 0px;
-  background-color: rgb(240, 240, 240);
-  border-radius: 15px;
+margin-top: 20px;
+margin-left: 0px;
+background-color: rgb(240, 240, 240);
+border-radius: 15px;
 }
 
 legend {
-  color:rgb(255, 115, 50);
-  border-radius: 15px;
+color:rgb(255, 115, 50);
+border-radius: 15px;
 }
-
 
 [type="radio"] {
   appearance: none;
   border: max(2px, 0.1em) solid gray;
   border-radius: 50%;
-  width: 1.25em;
-  height: 1.25em;
+  width: 1.3em;
+  height: 1.3em;
+  vertical-align: -4px;
 }
 
 [type="radio"]:checked {
@@ -77,6 +80,7 @@ border: max(2px, 0.1em) solid gray;
 border-radius: 20%;
 width: 1.25em;
 height: 1.25em;
+vertical-align: middle;
 }
 
 [type="checkbox"]:checked {
